[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/ship_01.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game/Ship.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game/Ships/Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/thrust_01.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 16, 32, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 15.5133

[sub_resource type="Animation" id=8]
resource_name = "flame"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ship_01/flame:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4 ]
}

[node name="Ship" type="RigidBody2D"]
gravity_scale = 0.0
linear_damp = 0.5
angular_damp = 5.0
script = ExtResource( 2 )

[node name="ship_01" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="flame" type="AnimatedSprite" parent="ship_01"]
position = Vector2( -27.1568, 0 )
frames = SubResource( 6 )
frame = 1
speed_scale = 1.798
playing = true

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -3.55848, 0 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flame = SubResource( 8 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FiringPoints" type="Node2D" parent="."]

[node name="FirePoint" type="Position2D" parent="FiringPoints"]
position = Vector2( 7.30424, -8.42798 )

[node name="FirePoint2" type="Position2D" parent="FiringPoints"]
position = Vector2( 7.304, 8.428 )

[node name="Shield" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -1.232, 0 )
[connection signal="timeout" from="FireDelay" to="." method="_on_FireDelay_timeout"]
